[package]
name = "registry_server"
authors = ["Niclas Klugmann <niclas@klugmann.de>"]
version = "0.1.0"
edition = "2021"
description = "Cargo Registry Server"
license = "All Rights Reserved"
keywords = ["cargo", "webserver", "registry"]
publish = false

[dependencies]
axum = { version = "0.7.7", default-features = false, features = ["http1", "json", "tokio"] }
semver = { version = "1.0.23", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sha2 = { version = "0.10.8", default-features = false }
sqlx = { version = "0.8.2", default-features = false, features = ["macros", "postgres", "runtime-tokio"] }
tokio = { version = "1.40.0", default-features = false, features = ["macros", "rt-multi-thread", "net", "process"] }
unicode-xid = "0.2.6"
